tests/expected_invalid_permit_escape_let.diag.out
<input>:9:21: error: permit value may only be used as a direct function argument
            let saved = pass
                        ^^^^
